--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 
 # rcurious
 
+Hello testing
+
 Thanks, @kimnewzealand, for setting up a meta [todo list](https://docs.google.com/document/d/1VNeVo_S9bL3azECuHFLK9QWBzNexJWzO3uNW07b0tVg/edit?usp=sharing) with big projects on it. 
 
 ## Installation
